adding get-part of thhe service and initial data after startup

--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
     </parent>
     <groupId>com.georgetedeev</groupId>
     <artifactId>inventoryservice</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>InventoryService</name>
-    <description>Service for inventroy managing</description>
+    <description>Service for inventory managing</description>
 
     <properties>
         <java.version>11</java.version>
