--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+#database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventorydb
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.default_schema=inventory_schema
+
 
