--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventorydb
+spring.datasource.url=jdbc:postgresql://postgres:5432/inventorydb
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
